Update layout: font and details

--- a/cv/_layouts/cv.html
+++ b/cv/_layouts/cv.html
@@ -10,6 +10,7 @@
     {% endcapture %}
     {{ style | scssify }}
   </style>
+  <link rel="stylesheet" href="https://fontlibrary.org/face/caladea" type="text/css"/>
 
 </head>
 <body>
